# fastform

./: .gitignore  repair_bootstrap.sh
fastform/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
fastform/data/: cms_rules.csv
fastform/src/fastform/: api.py  ingest_cms.py  ndc_to_rxcui.py
