[tool.poetry]
name = "fastform"
version = "0.1.0"
description = "Minimal drug-formulary rules engine (FastAPI + CSV + AI parsing + NN semantic search)"
authors = ["Jackson <you@example.com>"]
readme = "README.md"
packages = [{ include = "fastform", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
openai = "^1.51.0"
numpy = "^2.1.0"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.10.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
